--- a/style.css
+++ b/style.css
@@ -1,23 +1,43 @@
 body{
     background-color: black;
     color: white;
-}
-
-
-.externa{
-    height: 400px;
+    margin: 0;
     display: flex;
-    border: 5px solid yellow;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    font-size: 24px;
+    min-height: 100vh;
 }
 
-.caixa{
-    background-color: crimson;
-    border: 2px solid white;
-    margin: 5px;
-    padding: 5px;
-    width: 150px;
-    height: 150px;
+footer{
+    background-color: purple;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+aside{
+    background-color: lightgreen;
+    padding: 20px;
+    width: 300px;
+}
+
+main{
+    background-color: red;
+    padding: 20px;
+    flex-grow: 1;
+    flex: 1;
+}
+
+header{
+    background-color: lightcoral;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+#central{
+    display: flex;
+    flex: 1;
+    width: 1200px;
+    margin: auto;
 }
